empezando con css (fracaso total)

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <title>Apple Pie Recipe</title>
-</head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  </head>
 <body>
   <header>
-    <figure>
-      <img src="images/apple-pie.jpg" alt="apple-pie">
+    <div id="titulo">
       <h1>Apple Pie</h1>
-    </figure>
+    </div>
   </header>
   <section>
     <p>This was my grandmother's apple pie recipe. I have never seen another one
         quite like it. It will always be my favorite and has won me several first place
         prizes in local competitions. I hope it becomes one of your favorites as well!</p>
-    <img src="images/cooking-info.png" alt="cooking-info-apple-pie">
+    <img class="littleinfo" src="images/recipe-info.png" alt="recipe-info-apple-pie">
     </section>
 <section>
   <h2>Ingredients</h2>
@@ -28,6 +28,7 @@
     <li>1/2 cup packed brown sugar</li>
     <li>8 Granny Smith apples - peeled, cored and sliced</li>
   </ul>
+  <img class="littleinfo" src="images/cooking-info.png" alt="cooking-info-apple-pie">
 </section>
 <section>
 <h2>
