--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   </head>
 <body>
   <header>
-    <div id="titulo">
+    <div id=titulo>
       <h1>Apple Pie</h1>
     </div>
   </header>
-  <section>
+  <section id=prueba>
     <p>This was my grandmother's apple pie recipe. I have never seen another one
         quite like it. It will always be my favorite and has won me several first place
         prizes in local competitions. I hope it becomes one of your favorites as well!</p>
