--- a/index.html
+++ b/index.html
@@ -40,41 +40,50 @@
     <img class="center-horizontal" src="./images/recipe-info.png" alt="recipe-info.png" height="40px" />
   </section>
 
-<section class="center">
-  <h3>Ingredients</h3>
-  <ul>
-    <li>1 recipe pastry for a 9 inch double crust pie</li>
-    <li>1/2 cup unsalted butter</li>
-    <li>3 tablespoons all-purpose flour</li>
-    <li>1/4 cup water</li>
-    <li>3 tablespoons all-purpose flour</li>
-    <li>1/4 cup water</li>
-    <li>1/2 cup white sugar</li>
-    <li>1/2 cup packed brown sugar</li>
-    <li>8 Granny Smith apples - peeled, cored and sliced</li>
-  </ul>
-  <img class="center-horizontal" src="./images/cooking-info.png" alt="cooking-info.png" height="60px" />
-</section>
-<section id="last">
-  <h3>Directions</h3>
-  <ol>
-    <li>
-      Preheat oven to 425 degrees F (220 degrees C). Melt the butter in a
-      saucepan. Stir in flour to form a paste. Add water, white sugar and
-      brown sugar, and bring to a boil. Reduce temperature and let simmer.
-    </li>
-    <li>
-      Place the bottom crust in your pan. Fill with apples, mounded
-      slightly. Cover with a lattice work crust. Gently pour the sugar and
-      butter liquid over the crust. Pour slowly so that it does not run off.
-    </li>
-    <li>
-      Bake 15 minutes in the preheated oven. Reduce the temperature to 350
-      degrees F (175 degrees C). Continue baking for 35 to 45 minutes, until
-      apples are soft.
-    </li>
-  </ol>
-</section>
+  <section class="center">
+    <h3>Ingredients</h3>
+    <ul>
+      <li>1 recipe pastry for a 9 inch double crust pie</li>
+      <li>1/2 cup unsalted butter</li>
+      <li>3 tablespoons all-purpose flour</li>
+      <li>1/4 cup water</li>
+      <li>3 tablespoons all-purpose flour</li>
+      <li>1/4 cup water</li>
+      <li>1/2 cup white sugar</li>
+      <li>1/2 cup packed brown sugar</li>
+      <li>8 Granny Smith apples - peeled, cored and sliced</li>
+    </ul>
+    <img class="center-horizontal" src="./images/cooking-info.png" alt="cooking-info.png" height="60px" />
+  </section>
+  <section id="last">
+    <h3>Directions</h3>
+    <ol>
+      <li>
+        Preheat oven to 425 degrees F (220 degrees C). Melt the butter in a
+        saucepan. Stir in flour to form a paste. Add water, white sugar and
+        brown sugar, and bring to a boil. Reduce temperature and let simmer.
+      </li>
+      <li>
+        Place the bottom crust in your pan. Fill with apples, mounded
+        slightly. Cover with a lattice work crust. Gently pour the sugar and
+        butter liquid over the crust. Pour slowly so that it does not run off.
+      </li>
+      <li>
+        Bake 15 minutes in the preheated oven. Reduce the temperature to 350
+        degrees F (175 degrees C). Continue baking for 35 to 45 minutes, until
+        apples are soft.
+      </li>
+    </ol>
+  </section>
+  <footer>
+    <section class="center-horizontal">
+      <p>
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"> Copyright</a> &copy;
+        <script>document.write(new Date().getFullYear());</script>
+        Designed with <span>love</span> by <a href="https://theclick36.com">theclick36.
+      </p>
+    </section>
+  </footer>
 </body>
 
 </html>
