--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       first place prizes in local competitions. I hope it becomes one of your
       favorites as well!
     </p>
-    <img class="center-horizontal" src="./images/recipe-info.png" alt="recipe-info.png" height="40px" />
+    <img class="center-horizontal" id="recipe" src="./images/recipe-info.png" alt="recipe-info.png"  />
   </section>
 
   <section class="center">
@@ -53,7 +53,7 @@
       <li>1/2 cup packed brown sugar</li>
       <li>8 Granny Smith apples - peeled, cored and sliced</li>
     </ul>
-    <img class="center-horizontal" src="./images/cooking-info.png" alt="cooking-info.png" height="60px" />
+    <img class="center-horizontal" id="cooking" src="./images/cooking-info.png" alt="cooking-info.png"  />
   </section>
   <section id="last">
     <h3>Directions</h3>
@@ -80,7 +80,7 @@
       <p>
         <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"> Copyright</a> &copy;
         <script>document.write(new Date().getFullYear());</script>
-        Designed with <span>love</span> by <a href="https://theclick36.com">theclick36.
+        Designed with <span>love</span> by <a href="https://theclick36.com">theclick36.</a>
       </p>
     </section>
   </footer>
