--- a/index.html
+++ b/index.html
@@ -1,36 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Apple Pie Recipe</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Document</title>
 </head>
 <body>
-Apple Pie
+    <div class="Titulo Todo">
+        <span id="Titulo">Apple Pie</span>
+    </div>
 
-This was my grandmother's apple pie recipe. I have never seen another one
-quite like it. It will always be my favorite and has won me several first place
-prizes in local competitions. I hope it becomes one of your favorites as well!
+    <div class="Parrafo1">
+        <p><br><br>
+        <span>This was my grandmother's apple pie recipe. I have never seen another one quite like it. It will always be my favorite and has won me several first place prizes in local competitions. I hope it becomes one of your favorites as well!</span>
+        </p>
+    </div>
 
-Ingredients
-1 recipe pastry for a 9 inch double crust pie
-1/2 cup unsalted butter
-3 tablespoons all-purpose flour
-1/4 cup water
-3 tablespoons all-purpose flour
-1/4 cup water
-1/2 cup white sugar
-1/2 cup packed brown sugar
-8 Granny Smith apples - peeled, cored and sliced
+    <div class="Todo">
+        <img src="images/recipe-info.png" alt="">
+    </div>
 
-Directions
-Preheat oven to 425 degrees F (220 degrees C). Melt the butter in a saucepan. Stir in
-flour to form a paste. Add water, white sugar and brown sugar, and bring to a boil. Reduce
-temperature and let simmer.
+    <div class="Separador">
+        <hr>
+    </div>
 
-Place the bottom crust in your pan. Fill with apples, mounded slightly. Cover with a
-lattice work crust. Gently pour the sugar and butter liquid over the crust. Pour slowly so
-that it does not run off.
+    <div class="Ingredientes Parrafo2">
+        <h3>Ingredients</h3> 
+        <ul>
+            <li class="li1">1 recipe pastry for a 9 inch double crust pie</li> 
+            <li class="li1">1/2 cup unsalted butter</li>
+            <li class="li1">3 tablespoons all-purpose flour</li>
+            <li class="li1">1/4 cup water</li>
+            <li class="li1">3 tablespoons all-purpose flour</li>
+            <li class="li1">1/4 cup water</li>
+            <li class="li1">1/2 cup white sugar</li>
+            <li class="li1">1/2 cup packed brown sugar</li>
+            <li class="li1">8 Granny Smith apples - peeled, cored and sliced</li>
+        </ul> 
+    </div>
 
-Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175
-degrees C). Continue baking for 35 to 45 minutes, until apples are soft.
+    <div class="Todo">
+            <img src="images/cooking-info.png" alt="">
+    </div>
+
+    <div class="Separador">
+            <hr>
+    </div>
+
+    <div class="Direcciones Parrafo2">
+        <h3>Directions</h3>
+        <ol>
+            <li class="li2">Preheat oven to 425 degrees F (220 degrees C). Melt the butter in a saucepan. Stir in
+            flour to form a paste. Add water, white sugar and brown sugar, and bring to a boil. Reduce
+            temperature and let simmer.</li>
+            
+            <li class="li2">Place the bottom crust in your pan. Fill with apples, mounded slightly. Cover with a
+            lattice work crust. Gently pour the sugar and butter liquid over the crust. Pour slowly so
+            that it does not run off.</li>
+            
+            <li class="li2">Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175
+            degrees C). Continue baking for 35 to 45 minutes, until apples are soft.</li>
+        </ol>
+    </div>
+
 </body>
 </html>
