--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
 <head>
   <title>Apple Pie Recipe</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
 <body>
   <header>
-    <div id=titulo>
+    <div id="titulo">
       <h1>Apple Pie</h1>
     </div>
   </header>
-  <section id=prueba>
+  <section>
     <p>This was my grandmother's apple pie recipe. I have never seen another one
         quite like it. It will always be my favorite and has won me several first place
         prizes in local competitions. I hope it becomes one of your favorites as well!</p>
-    <img class="littleinfo" src="images/recipe-info.png" alt="recipe-info-apple-pie">
+    <img class="littleinfo" src="images/recipe-info.png" alt="recipe-info-apple-pie" height="40px">
     </section>
-<section>
+<section id="Ingredients">
   <h2>Ingredients</h2>
   <ul>
     <li>1 recipe pastry for a 9 inch double crust pie</li>
@@ -28,26 +29,24 @@
     <li>1/2 cup packed brown sugar</li>
     <li>8 Granny Smith apples - peeled, cored and sliced</li>
   </ul>
-  <img class="littleinfo" src="images/cooking-info.png" alt="cooking-info-apple-pie">
+  <img class="littleinfo" src="images/cooking-info.png" alt="cooking-info-apple-pie" height="60px">
 </section>
-<section>
-<h2>
-    Directions
-</h2>
-<ol>
-  <li>
-    Preheat oven to 425 degrees F (220 degrees C). Melt the butter in a saucepan. Stir in
-    flour to form a paste. Add water, white sugar and brown sugar, and bring to a boil. Reduce
-    temperature and let simmer.
+<section id="final">
+<h2>Directions</h2>
+  <ol>
     <li>
-    Place the bottom crust in your pan. Fill with apples, mounded slightly. Cover with a
-    lattice work crust. Gently pour the sugar and butter liquid over the crust. Pour slowly so
-    that it does not run off.
-  </li><li>
-    Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175
-    degrees C). Continue baking for 35 to 45 minutes, until apples are soft.
-  </li>
-</ol>
+      Preheat oven to 425 degrees F (220 degrees C). Melt the butter in a saucepan. Stir in
+      flour to form a paste. Add water, white sugar and brown sugar, and bring to a boil. Reduce
+      temperature and let simmer.
+      <li>
+      Place the bottom crust in your pan. Fill with apples, mounded slightly. Cover with a
+      lattice work crust. Gently pour the sugar and butter liquid over the crust. Pour slowly so
+      that it does not run off.
+    </li><li>
+      Bake 15 minutes in the preheated oven. Reduce the temperature to 350 degrees F (175
+      degrees C). Continue baking for 35 to 45 minutes, until apples are soft.
+    </li>
+  </ol>
 </section>
 
 </body>
