--- a/pastis-codi-inici/index.html
+++ b/pastis-codi-inici/index.html
@@ -9,7 +9,8 @@
 
 
 </head>
-<body>      
+<body>
+    <container>  
 <h1 id="capçalera">Apple Pie</h1>
                
 <section>
@@ -74,4 +75,5 @@ degrees C). Continue baking for 35 to 45 minutes, until apples are soft.</li></o
 </article>
 </section>
 </body>
+</container>  
 </html>
