--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" type="text/css" href="css/stils.css">
+  <link rel="stylesheet" type="text/css" href="./css/estils.css">
   <title>Apple Pie Recipe</title>
 </head>
 <body>
